# ImageSearch

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  SPECIFICATION.md  deploy-to-ecr.sh  pyproject.toml
app/: config.py  main.py
app/models/: schemas.py
app/routers/: images.py  search.py
app/services/: db_service.py  image_processor.py  image_service.py  s3_service.py  vector_store.py
data/: images.db
static/: index.html
static/css/: style.css
static/js/: app.js
